WIP: fixing overlap issues and event handling issues

--- a/src/client/js/Panels/SplitPanel/styles/SplitPanel.scss
+++ b/src/client/js/Panels/SplitPanel/styles/SplitPanel.scss
@@ -27,9 +27,11 @@ ul.split-panel-dropdown-list {
     overflow: hidden;
 
     .toolbar {
-      position: relative;
-      width: 100%;
-      height: 100%;
+      position: absolute;
+      right: 0px;
+      top: 0px;
+      width: 40px;
+      height: 40px;
       z-index: 1;
 
     }
